src/test/deca/context/invalid/resultats/test4_op_modulo3-ima.res
  IMA -- Fichier ./src/test/deca/context/invalid/test4_op_modulo3.ass introuvable
